# sdif

./: .env.local  .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
benchmarks/: README.md  latest  manifest.sdif  token_comparison.py
benchmarks/latest/: comparison.json  comparison.md  comparison.sdif.ai  summary.json  summary.md  summary.sdif
benchmarks/results/: README.md  dashboard.html  index-sdif-ai-viewer.html  index.json  index.sdif  markdown-viewer.html
benchmarks/results/context_packing/: comparison-sdif-ai-viewer.html  comparison.json  summary-sdif-ai-viewer.html  summary-viewer.html  summary.sdif.ai
benchmarks/results/delta_compactness/: comparison-viewer.html  comparison.md  summary-sdif-ai-viewer.html  summary-viewer.html  summary.json
benchmarks/results/roundtrip_fidelity/: comparison.md  dashboard.html  summary-sdif-ai-viewer.html  summary.json  summary.md  summary.sdif  summary.sdif.ai
benchmarks/results/token_efficiency/: comparison.json  comparison.md  comparison.sdif.ai  dashboard.html  summary-sdif-ai-viewer.html  summary.json  summary.md  summary.sdif
benchmarks/scripts/: README.md  context_packing.py  delta_compactness.py  retrieval_accuracy.py  roundtrip_fidelity.py  run_suite.py  token_efficiency.py
benchmarks/src/: README.md  dashboard_template.html  formats.py  infra.py  report.py  suite_dashboard.html
conformance/: manifest.sdif
conformance/cases/ai-alias-header/: canonical.sdif  source.sdif
conformance/cases/ai-compact-table/: canonical.sdif  source.sdif
conformance/cases/core-agent/: canonical.sdif  expected.tree  source.sdif
conformance/invalid/: nested_narrative_bad_close.sdif  table_too_few_cells.sdif  table_too_many_cells.sdif
conformance/valid/: ai_view_dollar_marker.sdif  json_projection_heterogeneous_list.sdif  nested_narrative.sdif
docs/: ai-speed-profile.md  canonicalization.md  comparison.md  release-process.md  roadmap-v1.md  sdif_v0.1.md  semantic-quality.md  spec.md
docs/archive/: roadmap-v1-report.md
docs/examples/: README.md
docs/superpowers/plans/: 2026-05-21-benchmark-golden-corpus.md
examples/: registry.sdif  schema.sdif  validation-report.sdif
examples/golden/agent-workflow/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/audit-provenance/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/deep-hierarchy-project/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/github.openapi/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/large-audit-trail/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/large-knowledge-graph/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/large-plan/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/large-registry/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/large-schema-catalog/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/large-support-export/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/large-validation-report/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/llm-api-response/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/medium-invoice-batch/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/medium-observability-run/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/medium-policy-catalog/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/medium-product-catalog/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/plan/: canonical.sdif  canonical.sha256  equivalent.json  equivalent.toon  equivalent.yaml  source.sdif
examples/golden/registry/: canonical.sdif  canonical.sha256  equivalent.json  equivalent.toon  equivalent.yaml  source.sdif
examples/golden/schema/: canonical.sha256  equivalent.json  equivalent.toon  equivalent.yaml  source.sdif
examples/golden/semantic-narrative/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/small-api-catalog/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/small-incident/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/small-invoice/: canonical.sdif  canonical.sha256  equivalent.json  source.sdif
examples/golden/validation-report/: canonical.sdif  canonical.sha256  equivalent.json  (+3 more)
scripts/: check_conformance_fixtures.py  check_semantic_quality.py  check_tree_sitter_scaffold.py  generate_benchmark_golden.py  generate_golden_fixtures.py  generate_large_golden.py  token_comparison.py
sdif-benchmarks/: README.md
sdif-benchmarks/results/: README-viewer.html  README.md  index-sdif-ai-viewer.html  index.sdif.ai
sdif-benchmarks/scripts/: roundtrip_fidelity.py  token_efficiency.py
sdif-benchmarks/src/: README.md  generic_dashboard.html  report.py
src/sdif/: __init__.py  cli.py
tests/: test_benchmark.py  test_canonical_fixtures.py  test_canonical_schema_policy.py  test_cli_inspect_fmt.py  test_cli_json_ai.py  test_cli_main.py  test_cli_validate.py  test_conformance.py  test_coverage_gaps.py  test_json_conversion.py  test_json_golden_equivalence.py  test_json_rel_rules_import.py  test_lexer.py  test_parser.py  test_parser_coverage.py  test_policy.py  test_repo_artifacts.py  test_semantic_quality.py  test_token_efficiency_outputs.py  test_validation.py  test_validation_types_rules.py
tools/: sdif-cli.py
tree-sitter-sdif/: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-sdif/queries/: highlights.scm
tree-sitter-sdif/src/: grammar.json  node-types.json  parser.c
(+398 files in other folders)
