[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdif"
version = "1.0.0"
description = "Semantic Data Interchange Format - Formato semántico compacto, canonicalizable y eficiente en tokens"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alessandro Barbagallo" }]
requires-python = ">=3.10"
keywords = ["sdif", "semantic-format", "canonicalization", "data-interchange", "ai", "llm", "validation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "tomli>=2.0.0; python_version < '3.11'",
]
tokens = ["tiktoken>=0.13.0"]

[project.scripts]
sdif = "sdif.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"

[tool.black]
line-length = 100

[tool.mypy]
files = ["src", "tests"]
exclude = [
  '^build/',
  '^dist/',
  '^\.venv/',
  '^\.mypy_cache/',
]
python_version = "3.12"
warn_unused_configs = true
show_error_codes = true

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "tomli>=2.0.0; python_version < '3.11'",
]
