# -----------------------------------------------------------------------------
# Build system
# -----------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


# -----------------------------------------------------------------------------
# Project metadata
# -----------------------------------------------------------------------------

[project]
name = "sdif"
version = "1.0.0"
description = "Semantic Data Interchange Format. Compact, canonicalizable and token-efficient structured data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Alessandro Barbagallo" },
]

keywords = [
    "sdif",
    "semantic-format",
    "canonicalization",
    "data-interchange",
    "ai",
    "llm",
    "validation",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []


# -----------------------------------------------------------------------------
# Optional dependencies
# -----------------------------------------------------------------------------

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.14",
    "tomli>=2.0.0; python_version < '3.11'",
]

tokens = [
    "tiktoken>=0.13.0",
]


# -----------------------------------------------------------------------------
# Command-line entry points
# -----------------------------------------------------------------------------

[project.scripts]
sdif = "sdif.cli:main"


# -----------------------------------------------------------------------------
# Setuptools
# -----------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["src"]


# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]


# -----------------------------------------------------------------------------
# Ruff
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"


# -----------------------------------------------------------------------------
# Mypy
# -----------------------------------------------------------------------------

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = true
show_error_codes = true

exclude = [
    "^build/",
    "^dist/",
    "^\\.venv/",
    "^\\.mypy_cache/",
]
