# -----------------------------------------------------------------------------
# Build system
# -----------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"


# -----------------------------------------------------------------------------
# Project metadata
# -----------------------------------------------------------------------------

[project]
name = "sdif-format"
version = "1.0.0"
description = "Semantic Data Interchange Format. Compact, canonicalizable and token-efficient structured data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    { name = "Alessandro Barbagallo" },
]

keywords = [
    "sdif",
    "semantic-format",
    "canonicalization",
    "data-interchange",
    "ai",
    "llm",
    "validation",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []


# -----------------------------------------------------------------------------
# Optional dependencies
# -----------------------------------------------------------------------------

[project.optional-dependencies]
dev = [
    "build>=1.2.0,<2.0",
    "mypy>=1.10.0,<3.0",
    "pytest>=8.0,<10.0",
    "pytest-cov>=5.0,<8.0",
    "ruff>=0.15.14,<1.0",
    "tomli>=2.0.0",
    "twine>=5.0.0,<7.0",
]

tokens = [
    "tiktoken>=0.13.0",
]


[project.urls]
Homepage = "https://sdif-format.github.io/sdif-docs/"
Repository = "https://github.com/sdif-format/sdif"
Documentation = "https://github.com/sdif-format/sdif#readme"
Issues = "https://github.com/sdif-format/sdif/issues"


# -----------------------------------------------------------------------------
# Command-line entry points
# -----------------------------------------------------------------------------

[project.scripts]
sdif = "sdif.cli:main"


# -----------------------------------------------------------------------------
# Setuptools
# -----------------------------------------------------------------------------

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sdif = ["py.typed"]


# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]


# -----------------------------------------------------------------------------
# Ruff
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py310"


# -----------------------------------------------------------------------------
# Mypy
# -----------------------------------------------------------------------------

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = true
show_error_codes = true

exclude = [
    "^build/",
    "^dist/",
    "^\\.venv/",
    "^\\.mypy_cache/",
]
